# vibratorsample

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/beancurdv/vibrator_sample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: BnVibratorManagerService.h  BpVibratorManagerService.cpp  BpVibratorManagerService.h  CMakeLists.txt  CombinedVibration.h  IVibratorManagerService.cpp  IVibratorManagerService.h  VibrationAttributes.h  VibratorInfo.h  native-lib.cpp  vibrator_main.cpp
app/src/main/cpp/aidl/android/os/: CombinedVibration.aidl  CombinedVibration.java  README.md  VibrationAttributes.aidl  VibrationAttributes.java  VibratorInfo.aidl  VibratorInfo.java
app/src/main/cpp/include/: LogUtils.h
app/src/main/cpp/include/android-base/: unique_fd.h
app/src/main/cpp/xh/android/os/: BnVibratorStateListener.h  BpVibratorManagerService.h  BpVibratorStateListener.h  IVibratorManagerService.cpp  IVibratorStateListener.cpp  IVibratorStateListener.h
app/src/main/java/com/beancurdv/vibrator_sample/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/beancurdv/vibrator_sample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
